[metadata]
name = an_gadget
version = attr: an_gadget.__version__
url = https://github.com/zolutal/angr_one_gadget
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
description = OneGadget finder using angr and capstone engine
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    angr
    capstone
python_requires = >= 3.8
packages = find:

[options.entry_points]
console_scripts =
    an_gadget = an_gadget:main